# ecoprompt

./: .env.example  .gitignore  LICENSE  README.md
bot/: __main__.py  config.py
bot/content/: quizzes.json
bot/content/lessons/ky/: 03_concise_prompting.md  06_few_shot_roles.md  08_system_prompts.md  09_advanced_techniques.md
bot/content/lessons/ru/: 01_what_are_tokens.md  03_concise_prompting.md  04_ai_for_learning.md  05_prompting_to_learn.md  06_few_shot_roles.md  09_advanced_techniques.md
bot/content/practice_tasks/: tasks.json
bot/db/: crud.py  models.py
bot/handlers/: feedback.py  lessons.py  settings.py  start.py  tracker.py
bot/i18n/: ky.json  ru.json
bot/keyboards/: main_menu.py  practice_kb.py
bot/middlewares/: i18n.py  throttle.py
bot/services/: impact_calculator.py  prompt_evaluator.py  token_counter.py
ecoprompt-bot/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
ecoprompt-bot/bot/content/lessons/ky/: 01_what_are_tokens.md  02_prompt_structure.md  04_ai_for_learning.md  05_prompting_to_learn.md  07_ai_safety.md
ecoprompt-bot/bot/content/lessons/ru/: 02_prompt_structure.md  07_ai_safety.md  08_system_prompts.md
ecoprompt-bot/bot/content/tips/: ky.json  ru.json
ecoprompt-bot/bot/db/: crud.py  session.py
ecoprompt-bot/bot/handlers/: leaderboard.py  practice.py  resources.py  tips.py
ecoprompt-bot/bot/i18n/: ru.json
ecoprompt-bot/bot/keyboards/: lesson_nav.py  main_menu.py
ecoprompt-bot/bot/services/: lesson_engine.py  llm.py  scoring.py
